--- a/WhereAmI/Base.lproj/Main.storyboard
+++ b/WhereAmI/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                                 <state key="normal" title="Where Am I?">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="onButtonPress:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="f0e-Wh-6kf"/>
+                                </connections>
                             </button>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="3IJ-7J-ZtH">
                                 <rect key="frame" x="-14" y="277" width="396" height="390"/>
